# fast-api-python-backend

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: celeryconfig.py  entry_point.sh  main.py
app/api/routes/: admin.py  api.py  carebear.py  task_runner.py  widget.py
app/db/migrations/: env.py
app/db/migrations/versions/: fdf8821871d7_base_table.py
app/models/: admin.py  carebear.py  error.py  task_runner.py  widgets.py
app/resources/: __init__.py  celery.py  logging.py
app/services/: APIendpoint.py  db_connection.py  db_get_Travelers.py  db_insert.py  db_inserts.py  db_removal.py  db_setup.py
app/services/celery/: tasks.py
app/services/thingy/: thingy.py
etc/: supervisord.conf
tests/: .coveragerc  run_tests.sh
tests/services/thingy/: test_thingy.py
