[tool.poetry]
name = "fast-api-base"
version = "0.1.0"
description = ""
authors = ["Andrew Kalz <andrew.kalz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
pydantic = "^1.9.0"
loguru = "^0.6.0"
uvicorn = "^0.17.6"
alembic = "^1.7.7"
PyMySQL = "^1.0.2"
celery = "^5.2.6"
redis = "^4.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
